ISIS-3022: reverting button colors to secondary = default

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
@@ -22,7 +22,7 @@
 <wicket:panel>
     <div class="linksSelectorPanel">
         <div class="btn-group viewLinks" wicket:id="views">
-            <button type="button" class="btn btn-sm btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+            <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-bs-toggle="dropdown">
             	<span wicket:id="viewButtonIcon" class="ViewLinkItem"></span>
                 <span wicket:id="viewButtonTitle" class="ViewLinkItemTitle"></span>
                 <span class="caret"></span>
