ISIS-3032: render placeholders as badge

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -823,6 +823,10 @@ div.referencePanel.scalarNameAndValueComponentType {
     margin-right: 0px;
 }
 
+.placeholder-literal-null,
+.placeholder-literal-suppressed {
+	opacity: 0.85;
+}
 
 .scalarValueWrapper ul.additionalLinkList {
     padding-bottom: 5px;
