ISIS-3032: css: font-size fix for badges inside tables and form-controls

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -44,6 +44,12 @@ body {
 	left: auto;
 }
 
+/* font-size fix for badges inside tables and form-controls */
+td .badge,
+.form-control-sm .badge {
+ font-size:.85em
+}
+
 .card {
 	margin-bottom: 21px;
 }
