ISIS-3033: remove superfluous wrapping span for select2
- also fixes select2 width to 100%

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -150,10 +150,8 @@
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-input-select2">
-           <span class="autoCompletePlaceholder">
-               <span wicket:id="entityLink">link or drop down</span>
-           </span>
-           <span wicket:id="entityTitleIfNull">(none)</span>
+			<span wicket:id="entityLink" class="w-100">link or drop down</span>
+			<span wicket:id="entityTitleIfNull">(none)</span>
 		</wicket:fragment>
 
 		<!-- PROMPT FRAGMENTS -->
