ISIS-3039: purge old config

--- a/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendarable/CalendarableCollectionAsFullCalendar.css
+++ b/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendarable/CalendarableCollectionAsFullCalendar.css
@@ -17,6 +17,10 @@
  *  under the License.
  */
 
+div .calendarableCollectionAsFullCalendar {
+	margin-top: 1rem;
+}
+
 .calendarableCollectionAsFullCalendar .selector {
 	float: right;
 	margin-bottom: -25px;
