--- a/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendareventable/CalendarEventableCollectionAsFullCalendar.css
+++ b/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendareventable/CalendarEventableCollectionAsFullCalendar.css
@@ -16,6 +16,9 @@
  *  specific language governing permissions and limitations
  *  under the License.
  */
+div .calendarEventableCollectionAsFullCalendar {
+	margin-top: 1rem;
+}
 
 .calendarEventableCollectionAsFullCalendar .selector {
 	float: right;
