ISIS-3040: fixes java-script to enable pdf page printing (v2)

--- a/extensions/vw/pdfjs/wicket/ui/src/main/java/org/apache/isis/extensions/pdfjs/wkt/ui/components/PdfJsViewerPanel.html
+++ b/extensions/vw/pdfjs/wicket/ui/src/main/java/org/apache/isis/extensions/pdfjs/wkt/ui/components/PdfJsViewerPanel.html
@@ -25,10 +25,10 @@
                     <div class="row">
                         <div class="scalarValue col-sm-12">
                             <div>
-                                <span>Page: <input wicket:id="currentPage"  class="pdf-js-page-current" title="Select Page" size="1"></input> / <span wicket:id="totalPages"  class="pdf-js-page-total"></span></span>
+                                <span>Page: <input wicket:id="currentPage" class="pdf-js-page-current" title="Select Page" size="1"></input> / <span wicket:id="totalPages" class="pdf-js-page-total"></span></span>
 
-                                <button wicket:id="prevPage" disabled type="button" class="fa fa-backward btn btn-xs btn-default pdf-js-page-prev" title="Previous"></button>
-                                <button wicket:id="nextPage" disabled type="button" class="fa fa-forward btn btn-xs btn-default pdf-js-page-next" title="Next"></button>
+                                <button wicket:id="prevPage" disabled type="button" class="fa fa-angle-left btn btn-xs btn-default pdf-js-page-prev" title="Previous"></button>
+                                <button wicket:id="nextPage" disabled type="button" class="fa fa-angle-right btn btn-xs btn-default pdf-js-page-next" title="Next"></button>
 
                                 <select wicket:id="currentZoom" title="Current Zoom Level" class="pdf-js-zoom-current">
                                     <option id="pageAutoOption" value="auto" >Automatic Zoom</option>
