--- a/extensions/vw/pdfjs/wicket/ui/src/main/java/org/apache/isis/extensions/pdfjs/wkt/ui/components/PdfJsViewerPanel.css
+++ b/extensions/vw/pdfjs/wicket/ui/src/main/java/org/apache/isis/extensions/pdfjs/wkt/ui/components/PdfJsViewerPanel.css
@@ -19,7 +19,7 @@
 
 .pdfPanel {
     width : 100%;
-    height : 100%;
+    /*height : 100%;*/
     border: 1px solid lightgrey;
     position : relative;
 }
