ISIS-3048: CSS fix for Select2 bottom margin

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -1232,6 +1232,12 @@ ul.navbar-wrap {
   margin-right: auto !important;
 }
 
+/* SELECT 2 */
+
+.select2-container {
+  margin-bottom: 5px;
+}
+
 /* TOOLTIPS */
 
 .tooltip {
