removes invalid html url

--- a/antora/supplemental-ui/partials/header-content-menubar.hbs
+++ b/antora/supplemental-ui/partials/header-content-menubar.hbs
@@ -1,1 +1,1 @@
-<a class="navbar-item" href="http://vssdmlivetfs:8080/tfs/BOMiLiveTFS/ReleaseEngineering/_git/AntoraTemplate">Home</a>
+<a class="navbar-item" href="#">Home</a>
