ISIS-3097: Migrate Prism to Webjars

--- a/examples/demo/domain/src/main/resources/static/css/application.css
+++ b/examples/demo/domain/src/main/resources/static/css/application.css
@@ -279,3 +279,9 @@ div.listingblock div.title {
     font-style: italic;
     color: darkred;
 }
+
+/* customized Prism theme COY */
+.listingblock pre[class*="language-"]::after, 
+.listingblock pre[class*="language-"]::before {
+	box-shadow: none;
+}
