ISIS-3180: enum css font-size fix

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -54,6 +54,7 @@ body {
 
 /* font-size fix for badges inside tables and form-controls */
 td .badge,
+.scalarPlaceholder .badge,
 .form-control-sm .badge {
 	font-size:.90em
 }
