ISIS-3180: badge CSS fixes:
- don't accumulate padding when nesting
- don't accumulate font-size reduction when nesting

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -56,7 +56,12 @@ body {
 td .badge,
 .scalarPlaceholder .badge,
 .form-control-sm .badge {
-	font-size:.90em
+	font-size:.85rem
+}
+td .badge span, 
+.scalarPlaceholder .badge span, 
+.form-control-sm .badge span {
+  padding: 0;
 }
 
 
