--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -58,8 +58,8 @@ td .badge,
 .form-control-sm .badge {
 	font-size:.85rem
 }
-td .badge span, 
-.scalarPlaceholder .badge span, 
+td .badge span,
+.scalarPlaceholder .badge span,
 .form-control-sm .badge span {
   padding: 0;
 }
@@ -1260,6 +1260,20 @@ ul.navbar-wrap {
 
 .select2-container {
   margin-bottom: 5px;
+}
+
+/* DATATABLES.NET */
+
+div.entityCollection div.dataTables_wrapper {
+    margin-top: 15px;
+}
+
+div.dataTables_wrapper select.form-select {
+    min-width: 60px;
+}
+
+div.dataTables_wrapper ul.pagination {
+    font-size: small;
 }
 
 /* TOOLTIPS */
