ISIS-3215: fixes regression from commit
- https://github.com/apache/isis/commit/352b08ba87e3244a7de1e49b74c06ebe77660370

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -143,12 +143,12 @@
 				class="form-control form-control-sm scalarValue"/>
 		</wicket:fragment>
 		
-		<wicket:fragment wicket:id="fragment-input-select">
+		<wicket:fragment wicket:id="fragment-input-select_value">
 			<select wicket:id="scalarValue"
 				class="choices form-control-sm select2-remote"/>
 		</wicket:fragment>
 		
-		<wicket:fragment wicket:id="fragment-input-select2">
+		<wicket:fragment wicket:id="fragment-input-select_object">
 			<span wicket:id="entityLink" class="w-100">link or drop down</span>
 			<span wicket:id="entityTitleIfNull">(none)</span>
 		</wicket:fragment>
