--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/sidebar/css/simple-sidebar.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/sidebar/css/simple-sidebar.css
@@ -169,7 +169,7 @@ body {
 }
 
 #sidebar-wrapper:not(.toggled) {
-	display: table; /* [ISIS-3166] allows child components to escape right boundary */
+	display: table; /* [CAUSEWAY-3166] allows child components to escape right boundary */
 }
 
 #page-content-wrapper {
