--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-darkly.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-darkly.css
@@ -50,7 +50,7 @@ a.scalarValueInlinePromptLink:focus textarea,
     background-color: rgb(34, 34, 34);
 }
 
-/* ISIS-2092 fixing Darkly Theme: buttons and fieldset-headers have same background-color */
+/* CAUSEWAY-2092 fixing Darkly Theme: buttons and fieldset-headers have same background-color */
 .card > .card-header {
     background-color: #515050;
 }
