ISIS-3142: renaming: batch process all .html/.thtml files (except antora/*)

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -123,7 +123,7 @@
 		<wicket:fragment wicket:id="fragment-input-textarea">
 			<textarea wicket:id="scalarValue" name="scalarValue"
 				class="form-control form-control-sm scalarValue"
-				data-isis-focus="true" />
+				data-causeway-focus="true" />
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-input-checkbox">
