--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract_xray.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract_xray.html
@@ -131,7 +131,7 @@
 			<!-- fragment-input-textarea -->
 			<textarea wicket:id="scalarValue" name="scalarValue"
 				class="form-control form-control-sm scalarValue"
-				data-isis-focus="true" />
+				data-causeway-focus="true" />
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-input-checkbox">
