ISIS-3301: collection presentation selection done with a simple btn-link

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
@@ -21,10 +21,10 @@
 <body>
 <wicket:panel>
     <div class="linksSelectorPanel">
-        <div class="btn-group viewLinks" wicket:id="views">
-            <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-bs-toggle="dropdown">
+        <div class="viewLinks" wicket:id="views">
+            <button type="button" class="btn btn-link dropdown-toggle" data-bs-toggle="dropdown" style="text-decoration: none">
             	<span wicket:id="viewButtonIcon" class="ViewLinkItem"></span>
-                <span wicket:id="viewButtonTitle" class="ViewLinkItemTitle"></span>
+<!--                 <span wicket:id="viewButtonTitle" class="ViewLinkItemTitle"></span> -->
                 <span class="caret"></span>
             </button>
             <ul wicket:id="viewList" class="dropdown-menu dropdown-menu-right" role="menu">
