ISIS-3317: CSS navbar link color fix

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -117,10 +117,9 @@ td .badge span,
     margin-bottom: 0px;
 }
 
-.nav-link, a, .btn-link {
+a, .btn-link {
 	color: var(--link-color);
 }
-.nav-link:focus, .nav-link:hover,
 a:focus, a:hover,
 .btn-link:focus, .btn-link:hover {
     color: var(--link-color-hover);
