--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-flatly.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-flatly.css
@@ -17,11 +17,11 @@
  *  under the License.
  */
 
-/* fixate menu label color on hover */
+/* fixate menu label color */
+.bg-primary .navbar-nav .nav-link,
 .bg-primary .navbar-nav .nav-link.active, 
 .bg-primary .navbar-nav .nav-link:focus, 
-.bg-primary .navbar-nav .nav-link:hover, 
-.bg-primary .navbar-nav .show > .nav-link {
+.bg-primary .navbar-nav .nav-link:hover {
 	color: white !important;
 }
 
