--- a/antora/supplemental-ui/css/home/style.css
+++ b/antora/supplemental-ui/css/home/style.css
@@ -25,6 +25,8 @@
   License: https://bootstrapmade.com/license/
 */
 
+
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -38,8 +40,15 @@
   --color-isis-blue: #3c76bd;
   --color-dark-blue: #0c2e8a;
 
-  --color-theme-blue: var(--color-dark-blue);
-  --color-theme-green: var(--color-isis-green);
+  /* https://coolors.co/5ab1bb-8f3985-eeb4b3-2364aa-fec601 */
+  --color-causeway-purple: #8F3985;
+  --color-causeway-cyan: #5AB1BB;
+  --color-causeway-pink: #EEB4B3;
+  --color-causeway-blue: #2364AA;
+  --color-causeway-yellow: #FEC601;
+
+  --color-theme-blue: var(--color-causeway-purple);
+  --color-theme-green: var(--color-causeway-yellow);
 }
 
 body {
@@ -156,7 +165,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #header {
-  padding: 20px 0;
+  padding: 10px 0;
   height: 84px;
   transition: all 0.5s;
   z-index: 997;
@@ -165,11 +174,11 @@ h6 {
 }
 
 #header #logo h1 {
-  font-size: 42px;
+  font-size: 50px;
   margin: 0;
   padding: 0;
   line-height: 1;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Android Insomnia", "Montserrat", sans-serif;
   font-weight: 700;
 }
 
@@ -177,7 +186,19 @@ h6 {
   color: var(--color-theme-blue);
   line-height: 1;
   display: inline-block;
-  font-size: smaller;
+  font-size: inherit;
+}
+
+#header #logo h1 a span.asf {
+  color: var(--color-causeway-cyan);
+}
+
+#header #logo h1 a img {
+  margin-top: 10px;
+}
+
+#header #logo h1 a span.brand {
+  color: var(--color-causeway-purple);
 }
 
 #header #logo h1 a span {
@@ -234,7 +255,7 @@ h6 {
 #intro .intro-content h2 {
   color: var(--color-theme-blue);
   margin-bottom: 30px;
-  font-size: 64px;
+  /*font-size: 42px;*/
   font-weight: 700;
 }
 
@@ -371,6 +392,7 @@ h6 {
 #nav-menu-container {
   float: right;
   margin: 0;
+  padding-top: 10px;
 }
 
 /* Nav Meu Styling */
@@ -864,7 +886,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #call-to-action {
-  background: #081e5b;
+  background: var(--color-causeway-purple);
   background-size: cover;
   padding: 40px 0;
 }
@@ -1115,6 +1137,21 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
+@media (max-width: 1200px) {
+  h1 a span.brand {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  #nav-menu-container {
+    display: none;
+  }
+  #mobile-nav-toggle {
+    display: inline;
+  }
+}
+
 @media (max-width: 768px) {
   .back-to-top {
     bottom: 15px;
@@ -1131,14 +1168,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
   #header #logo img {
     max-height: 40px;
-  }
-
-  #nav-menu-container {
-    display: none;
-  }
-
-  #mobile-nav-toggle {
-    display: inline;
   }
 
   #why .why-img {
@@ -1185,7 +1214,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #call-to-action pre {
   color: wheat;
-  background-color: darkslateblue;
+  background-color: var(--color-causeway-blue);
 }
 
 img.helloworld-copy,
